--- a/src/components/ShowMobile/ShowMobile.module.css
+++ b/src/components/ShowMobile/ShowMobile.module.css
@@ -141,6 +141,7 @@
     justify-self: center;
     border-bottom: 4px dotted gray;
     padding-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .noPic{
