--- a/src/components/Show/Show.module.css
+++ b/src/components/Show/Show.module.css
@@ -4,6 +4,7 @@
     background-color: #ECE9DF;
     border-radius: 30px;
     border: 8px solid rgba(0, 0, 0, 0.58);
+    border: 8px solid rgb(99 101 101);
     position: sticky;
     top: 150px;
 }
