--- a/src/pages/Publish/Publish.module.css
+++ b/src/pages/Publish/Publish.module.css
@@ -148,7 +148,7 @@
     border-radius: 20px;
     box-shadow: 0px 4px 10px #AAAAAA;
     cursor: pointer;
-    margin-bottom: 20px;
+    margin: 20px 0 10px;
 
     transition: all 0.2s ease-in;
 }
@@ -171,7 +171,7 @@
 
 .img{
     width: 25vw;
-    margin: 10px 0;
+    margin: 20px 0 10px;
     border-radius: 10px;
 }
 
