--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,6 @@ nav{
     display: grid;
     grid-template-columns: 2fr 1.8fr;
     margin: auto;
-    padding: 10px 3vw;
     border-bottom: 5px solid #ECE9DF;
     background-color: #728d81;
     position: sticky;
@@ -11,7 +10,8 @@ nav{
 }
 
 .title{
-    margin-left: 15px;
+    margin-left: 3vw;
+    padding: 10px 0;
 }
 
 .title a{
@@ -32,9 +32,10 @@ nav{
     justify-content: end;
     align-items: center;
     gap: 20px;
-    margin-right: 15px;
+    margin-right: 3vw;
     font-size: 18px;
     font-weight: bold;
+    align-items: flex-end;
 }
 
 .login{
@@ -74,24 +75,28 @@ nav{
     color: #ECE9DF;
 }
 
+.member{
+    padding-bottom: 20px;
+}
+
 .member a{
     text-decoration: none;
     color: #ECE9DF;
 }
 
 .member a:hover{
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     border-bottom: 5px solid #587367;
 }
 
 .openDoor{
     color: #ECE9DF;
     cursor: pointer;
+    padding-bottom: 20px;
 }
 
-.openDoor a:hover{
-    padding-bottom: 10px;
-    border-bottom: 5px solid #587367;
+.openDoor:hover .copy{
+    display: block;
 }
 
 .copy{
@@ -100,12 +105,13 @@ nav{
     top: 76px;
     width: 150px;
     height: 90px;
-    right: -120px;
-    right: 62px;
+    right: 3vw;
     overflow: hidden;
     padding: 10px 10px 10px 15px;
     border-radius: 0 0 10px 10px;
     animation: appear 0.2s ease-in;
+
+    display: none;
 }
 
 @keyframes appear {
@@ -149,6 +155,7 @@ nav{
     border-radius: 5px;
     border: 2px solid #ECE9DF;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .logout:hover{
@@ -174,7 +181,7 @@ nav{
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 69px;
+    top: 55px;
     left: 0;
     z-index: 2;
     height: 100%;
@@ -184,6 +191,11 @@ nav{
     animation: open .3s ease-in-out;
 
     display: none;
+}
+
+:global(.active){
+    padding-bottom: 15px;
+    border-bottom: 5px solid #587367;
 }
 
 @keyframes open {
