02/24 - feature: Member page-social icons

--- a/src/components/Box/Box.module.css
+++ b/src/components/Box/Box.module.css
@@ -49,6 +49,7 @@
     letter-spacing: 1px;
     border-radius: 5px;
     cursor: pointer;
+    transition: all .3s linear;
 }
 
 .textValueAndEditPen:hover{
@@ -73,7 +74,6 @@
 
 .editPen{
     width: 30px;
-    /* margin-left: 20px; */
     padding-right: 5px;
     cursor: pointer;
 }
@@ -81,12 +81,12 @@
 .edit{
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
     width: 80%;
     background-color: #ECE9DF;
     position: relative;
     padding-left: 10px;
     height: 66px;
+    border-radius: 5px;
 }
 
 .textInput {
@@ -102,8 +102,6 @@
 }
 
 .editButton{
-    /* position: absolute;
-    right: 0; */
     align-self: end;
     display: flex;
     flex-direction: column;
@@ -116,8 +114,7 @@
     background-color: #587367;
     width: 45px;
     text-align: center;
-
-
+    box-shadow: 0px 1px 6px rgb(140 138 138);
     animation: dude .5s 1 forwards;
 }
 
@@ -132,40 +129,28 @@
 
 .TextSaveButton{
     padding: 4px 5px;
-    font-weight: bold;
     cursor: pointer;
-    background-color: #587367;
-    color: white;
     border-radius: 10px 0 0 0;
-    /* width: 50%; */
     height: 50%;
+    transition: all .3s linear;
 }
 
 .TextCancelButton{
     padding: 4px 5px;
     cursor: pointer;
-    color: white;
     border-radius: 0 0 0 10px;
     height: 50%;
+    transition: all .3s linear;
 }
 
 .TextSaveButton:hover, .TextCancelButton:hover{
     background-color: #395347;
 }
 
-.saveButton{
-    padding: 5px 0;
-    font-weight: bold;
-    cursor: pointer;
-    background-color: #587367;
-    color: white;
-}
-
-.cancelButton{
+.saveButton, .cancelButton{
     padding: 5px 0;
     cursor: pointer;
-    color: white;
-    /* background-color: #8080808f; */
+    transition: all .3s linear;
 }
 
 .saveButton:hover, .cancelButton:hover{
@@ -192,6 +177,7 @@
 .trashButton{
     width: 30px;
     cursor: pointer;
+    transition: all .3s linear;
 }
 
 .trashButton:hover{
@@ -240,6 +226,7 @@
     padding-left: 10px;
     height: 66px;
     flex-wrap: wrap;
+    border-radius: 5px;
 }
 
 .titleInput{
@@ -282,26 +269,24 @@
     transition: all .3s linear;
 }
 
-.imgValueAndEditPen:hover{
-    background-color: #ECE9DF;
-}
-
 .imgValueAndEditPen{
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 80%;
-    /* padding: 0px 10px; */
     font-size: 18px;
     letter-spacing: 1px;
     border-radius: 5px;
     cursor: pointer;
+    transition: all .3s linear;
+}
+
+.imgValueAndEditPen:hover{
+    background-color: #ECE9DF;
 }
 
 .imgValue{
     height: 20vw;
-    /* height: 22vw; */
-    /* height: 16vw; */
     padding-left: 10px;
     cursor: auto;
 }
@@ -312,7 +297,6 @@
     color: gray;
     display: flex;
     align-items: center;
-    /* border: 4px dashed #8080805e; */
     justify-content: center;
 }
 
@@ -330,6 +314,7 @@
     width: 80%;
     background-color: #ECE9DF;
     padding-left: 10px;
+    border-radius: 5px;
 }
 
 .imgValueEdit{
@@ -355,8 +340,6 @@
 .imgEdit{
     width: 100%;
     height: 20vw;
-    /* width: 26vw;
-    height: 18vw; */
     aspect-ratio: 4/3;
     padding: 10px 0;
 }
@@ -364,16 +347,14 @@
 .picEditButton{
     display: flex;
     flex-direction: column;
-    /* width: 65px; */
-    /* width: 13%; */
     width: 45px;
     align-items: flex-end;
     justify-content: center;
-
     border-radius: 10px 0 0 10px;
     border: 1px solid #587367;
     background-color: #587367;
     text-align: center;
+    box-shadow: 0px 1px 6px rgb(140 138 138);
 
     animation: dude .5s 1 forwards;
 }
@@ -386,7 +367,6 @@
         transform: translateX(0px);
     }
 }
-
 
 .imageIcon{
     width: 2.5vw;
@@ -408,21 +388,13 @@
     vertical-align: middle;
 }
 
-/* .imgHaveValue{
-    height: 20vw;
-    width: 100%;
-    color: gray;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
-
 .uploadButton{
     font-weight: bold;
     cursor: pointer;
     background-color: #587367;
     color: white;
     margin-bottom: 20px;
+    transition: all .3s linear;
 }
 
 .uploadButton:hover{
@@ -448,8 +420,6 @@
 .picInfo{
     color: gray;
     margin-top: 15px;
-    /* margin-top: 8px;
-    margin-top: 13px; */
 }
 
 .lineBox{
@@ -476,8 +446,6 @@
     width: 75%;
     border: 1px solid;
 }
-
-/* delete Check box */
 
 .popup{
     position: fixed;
@@ -519,6 +487,7 @@
     color: #665d5d;
     font-weight: bold;
     margin-right: 10px;
+    transition: all .3s linear;
 }
 
 .cancelDeleteButton:hover{
@@ -532,45 +501,15 @@
     cursor: pointer;
     color: #665d5d;
     font-weight: bold;
-    background-color: rgb(177 51 51);
     background-color: rgb(212 100 100);
     color: white;
     margin-left: 10px;
+    transition: all .3s linear;
 }
 
 .deleteButton:hover{
-    background-color: rgb(123 35 35);
     background-color: rgb(177 51 51);
 }
-
-
-/* .testImgEdit{
-    background-color: white;
-    width: 63%;
-    width: 665px;
-    height: 80%;
-    height: 530px;
-    min-height: 80%;
-    margin-right: 20px;
-    border-radius: 7px;
-    box-shadow: 0px 1px 6px 2px #605c5c;
-
-    animation: dude .5s 1 forwards;
-}
-
-@keyframes dude {
-    0% {
-        transform: translateX(500px);
-      }
-    50%{
-        transform: translateX(-50px);
-    }
-    100% {
-        transform: translateX(0px);
-    }
-  } */
-
-
 
 @media (max-width: 700px) {
     .allText{
