--- a/src/components/AddButton/AddButton.module.css
+++ b/src/components/AddButton/AddButton.module.css
@@ -41,7 +41,7 @@
     border-radius: 0 0 50px 50px;
     background-color: white;
     box-shadow: 0px 4px 10px #aaaaaa;
-    transition: all .3s linear;
+    transition: all .1s linear;
 }
 
 .addTextButton, .addLinkButton, .addImgButton, .addLineButton{
@@ -56,6 +56,7 @@
     background-color: white;
     color: #333333;
     display: flex;
+    align-items: center;
     gap: 10px;
     transition: all .3s linear;
 }
@@ -67,6 +68,18 @@
 .icon{
     width: 30px;
     vertical-align: middle;
+}
+
+.titleAndRemark{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+.remark{
+    font-size: 14px;
+    color: gray;
 }
 
 @media (max-width: 700px) {
