--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -5,11 +5,10 @@
 @value translucent-black: rgba(0, 0, 0, 0.5);
 
 .main{
-    /* max-width: 900px; */
     margin: auto;
     padding: 60px 0;
     margin-bottom: 25px;
-    background-color: natural;
+    background-color: #ECE9DF;
     color: #333333;
 }
 
@@ -42,8 +41,16 @@
     gap: 3px;
 }
 
-.signup p{
+.account, .password{
+    display: flex;
+    gap: 10px;
     font-size: 18px;
+    align-items: center;
+}
+
+.remark{
+    font-size: 14px;
+    color: gray;
 }
 
 .signup input{
@@ -62,7 +69,6 @@
     font-weight: bold;
     letter-spacing: 5px;
     width: 200px;
-    /* padding: 8px; */
     margin-top: 15px;
 
     background-color: light-green;
