02/25 - fix: Admin page leaf position

--- a/src/components/AddButton/AddButton.module.css
+++ b/src/components/AddButton/AddButton.module.css
@@ -2,9 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin-bottom: 30px;
     position: relative;
+}
+
+.imgLeaf{
+    animation: leaf infinite linear 3s;
+}
+
+@keyframes leaf{
+    0%{
+        transform: rotate(0deg);
+    }
+    25%{
+        transform: rotate(15deg);
+    }
+    50%{
+        transform: rotate(0deg);
+    }
+    75%{
+        transform: rotate(-15deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
 }
 
 .clickTitle{
