--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -1,15 +1,8 @@
-@value light-green: #728d81;
-@value deep-green: #587367;
-@value natural: #ECE9DF;
-@value white: #fff;
-@value translucent-black: rgba(0, 0, 0, 0.5);
-
 .main{
-    /* max-width: 900px; */
     margin: auto;
     padding: 60px 0;
     margin-bottom: 25px;
-    background-color: natural;
+    background-color: #ECE9DF;
     color: #333333;
 }
 
@@ -56,20 +49,17 @@
     border-bottom: 1px solid gray;
     letter-spacing: 1.5px;
     font-size: 18px;
-    color: translucent-black;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .loginButton{
     font-weight: bold;
     letter-spacing: 5px;
     width: 200px;
-    /* padding: 8px; */
     margin-top: 15px;
-
-    background-color: light-green;
-    color: natural;
+    background-color: #728d81;
+    color: #ECE9DF;
     cursor: pointer;
-
     border: 2px solid rgba(0, 0, 0, 0.3);
     box-shadow: 0 3px rgba(0, 0, 0, 0.7);
     transition: .2s all ease-in;
@@ -99,7 +89,7 @@
 
 .toSignup a{
     text-decoration: none;
-    color: light-green;
+    color: #728d81;
     font-weight: bold;
     cursor: pointer;
 }
