--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -1,9 +1,3 @@
-@value light-green: #728d81;
-@value deep-green: #587367;
-@value natural: #ECE9DF;
-@value white: #fff;
-@value translucent-black: rgba(0, 0, 0, 0.5);
-
 .main{
     margin: auto;
     padding: 60px 0;
@@ -61,7 +55,7 @@
     border-bottom: 1px solid gray;
     letter-spacing: 1.5px;
     font-size: 18px;
-    color: translucent-black;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .signupButton{
@@ -71,8 +65,8 @@
     width: 200px;
     margin-top: 15px;
 
-    background-color: light-green;
-    color: natural;
+    background-color: #728d81;
+    color: #ECE9DF;
     cursor: pointer;
 
     border: 2px solid rgba(0, 0, 0, 0.3);
@@ -103,7 +97,7 @@
 
 .toLogin a{
     text-decoration: none;
-    color: light-green;
+    color: #728d81;
     font-weight: bold;
     cursor: pointer;
 }
