--- a/src/components/Preview/Preview.module.css
+++ b/src/components/Preview/Preview.module.css
@@ -17,7 +17,7 @@
     overflow:auto;
     height: 94%;
     margin-top: 10px;
-    padding: 0 13px;
+    /* padding: 0 13px; */
     text-align: center;
     display: grid;
     justify-content: center;
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 160px;
     justify-self: center;
     border-bottom: 2px dotted gray;
     padding: 0 5px;
@@ -80,6 +80,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 5px 0;
 }
 
 .iconLink{
@@ -123,9 +124,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35px;
     font-size: 13px;
     font-weight: 600;
+    padding: 10px;
 }
 
 .link:hover{
@@ -211,7 +212,7 @@
 }
 
 .line{
-    width: 100%;
+    width: 160px;
     border: 1px solid;
 }
 
